--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello</title>
+    <title>New Title</title>
   </head>
   <body>
     <p>Hello</p>
     <p>Hi!</p>
+    <p>Whatsup?</p>
   </body>
 </html>
